fixed z-index issues with the admin page ops popup and the tooltip for active page titles

--- a/css/core/_base.scss
+++ b/css/core/_base.scss
@@ -270,6 +270,10 @@ body.theforce-enabled{
     border-color: transparent;
     position:relative;
 
+    &:hover{
+      z-index: 1;
+    }
+
     .theforce-element{
       display:block;
       position: relative;
