--- a/css/core/_top.scss
+++ b/css/core/_top.scss
@@ -87,6 +87,7 @@
 
     .theforce-element{
       @include button-top();
+      float: left;
     }
 
     > a.theforce-element{
@@ -178,7 +179,6 @@
         box-shadow: 0 2px 2px rgba(#000, 0.25);
         pointer-events: none;
         text-shadow:none;
-        z-index:100;
 
         &:before{
           display:block;
@@ -191,6 +191,7 @@
           border-style: solid;
           border-width: 6px 6px 6px 0;
           border-color: transparent $theforce-top-color transparent transparent;
+          z-index: 1;
         }
       }
 
